@@ -1,13 +1,17 @@
 package org.semispace.admin;
 
-import junit.framework.TestCase;
+import org.junit.jupiter.api.Test;
+import org.semispace.JacksonSerializer;
 import org.semispace.SemiSpaceInterface;
 
-public class TerraAdminTest extends TestCase {
+import static org.junit.jupiter.api.Assertions.*;
 
+public class TerraAdminTest {
+
+    @Test
     public void testPerformInitializationAsMaster() {
         SemiSpaceInterface ts = new JunitSpace();
-        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts);
+        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts, new JacksonSerializer());
         assertNotNull(admin);
         admin.performInitialization();
         // Double initialization does not give error(s)
@@ -16,21 +20,22 @@ public class TerraAdminTest extends TestCase {
         assertEquals(1, admin.getSpaceId());
     }
 
+    @Test
     public void testIncreaseOfSpaceId() {
         SemiSpaceInterface ts = new JunitSpace();
         IdentifyAdminQuery iaq = new IdentifyAdminQuery();
         iaq.amIAdmin = Boolean.TRUE;
-        iaq.id = new Integer(1);
+        iaq.id = Integer.valueOf(1);
         iaq.hasAnswered = Boolean.TRUE;
         ts.write(iaq, 1000);
-        
+
         TimeQuery tq = new TimeQuery();
         tq.isFinished = Boolean.TRUE;
-        
-        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts);
+
+        SemiSpaceAdmin admin = new SemiSpaceAdmin(ts, new JacksonSerializer());
         admin.performInitialization();
         assertFalse(admin.isMaster());
-     
-        assertEquals("Space id shall typically increase with one.", iaq.id.intValue() +1, admin.getSpaceId());
+
+        assertEquals(iaq.id.intValue() + 1, admin.getSpaceId(), "Space id shall typically increase with one.");
     }
 }
